--- a/index.html
+++ b/index.html
@@ -68,27 +68,30 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    May.2022 - Present, <i>Research Intern</i>, <b>Megvii Research</b>
+    May.2022 - Present, <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>
   </li>
   <li>
-    Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b>Alibaba</b>
+    Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b><a href="https://www.alibabagroup.com/">Alibaba</a></b>
   </li>
 </ul>
 
 <h2>Awards</h2>
 <ul>
   <li>
-    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 validation leaderboard (<b>ECCV 2022</b> Workshop)
+    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 validation leaderboard, <b>ECCV 2022</b> Workshop
   </li>
   <li>
-    <b>4<sup>th</sup></b> place at VisDA-2022 test leaderboard (<b>NIPS 2022</b> Workshop)
+    <b>4<sup>th</sup></b> place at VisDA-2022 test leaderboard, <b>NIPS 2022</b> Workshop
   </li>
   <li>
-    <b>China National Scholarship</b>   (2021)
+  <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
+  </li>
+  <li>
+    China <b>National</b> Scholarship, 2021
   </li>
 
   <li>
-    <b>First</b> Prize at Mathematics competition  of Chinese College Students (2019)
+    <b>First</b> Prize at Mathematics competition  of Chinese College Students, 2019
   </li>
 </ul>
 
