--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 <h2>Awards</h2>
 <ul>
   <li>
-    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 validation leaderboard, <b>ECCV 2022</b> Workshop
+    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
   </li>
   <li>
-    <b>4<sup>th</sup></b> place at VisDA-2022 test leaderboard, <b>NIPS 2022</b> Workshop
+    <b>4<sup>th</sup></b> place at VisDA-2022 <a href="https://eval.ai/web/challenges/challenge-page/1806/leaderboard/4228">test leaderboard</a>, <b>NIPS 2022</b> Workshop
   </li>
   <li>
   <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
