--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <br> Leetcode
         <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
         <br> CV: 
-        <a href="">CV Link</a>
+        <a href="https://www.wondercv.com/cvs/udOPO78G-khlgaepfaeidhdieihmgjh/share">CV Link</a>
         <br><br></p>
       </td>
       <td>
