--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h2>Biography</h2>
 
 <p> I am a 1st-year phd student working with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a> at Harbin Institute of Technology (HIT).
-  I got the B.S. degree in computer science at HIT in 2022.  My research currently concentrates on 3D reconstruction, Semantic Scene Completion.</p>
+  I got the B.S. degree in computer science at HIT in 2022.  My research currently concentrates on 3D reconstruction, 3D occupancy prediction </p>
 
 
 <h2>Experience</h2>
