fix student mail

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br>Harbin, China
         <br>
         <br> Email:  
-        <a href="22B903037@stu.hit.edu.cn"> 22B903037@stu.hit.edu.cn</a>;
+        <a href="hitcslj@stu.hit.edu.cn"> hitcslj@stu.hit.edu.cn</a>;
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="liujian2498065510@gmail.com"> liujian2498065510@gmail.com</a>
         <br> Github: 
         <a href="https://github.com/hitcslj">https://github.com/hitcslj</a>
