--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <h2>Awards</h2>
 <ul>
   <li>
-    <b>5<sup>th</sup></b> place at 3D occupancy prediction @autonomous driving challenge <a href="https://eval.ai/web/challenges/challenge-page/2045/leaderboard/4838/mIoU">test leaderboard</a>, <b>CVPR 2023</b> Workshop
+    <a href="https://opendrivelab.com/AD23Challenge.html#Track3"><b>Innovation Award</b></a> at 3D occupancy prediction @autonomous driving challenge , <b>CVPR 2023</b> Workshop
   </li>
   <li>
     <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
