--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <br> Email:  
         <a href="hitcslj@stu.hit.edu.cn"> hitcslj@stu.hit.edu.cn</a>;
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="liujian2498065510@gmail.com"> liujian2498065510@gmail.com</a>
+<!--        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="liujian2498065510@gmail.com"> liujian2498065510@gmail.com</a>-->
         <br> Github: 
         <a href="https://github.com/hitcslj">https://github.com/hitcslj</a>
         <br> Google Scholar: 
