--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    July.2023 - Now , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research TF group</a></b>
+    July.2023 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research TF group</a></b>
   </li>
   <li>
     May.2022 - Jun.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research AIC group</a></b>
