--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
     
 <h2>Biography</h2>
 
-<p> I am a 2nd-year phd student working with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a> at Harbin Institute of Technology (HIT).
-  I got the B.S. degree in computer science at HIT in 2022.  My research currently concentrates on 3D reconstruction, 3D occupancy prediction </p>
+
+  <p> I am a second-year PhD student working with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a> at Harbin Institute of Technology (HIT).
+  I obtained my Bachelor's degree in Computer Science from HIT in 2022. Currently, my research focuses on 3D vision, specifically AIGC-3D.</p>
+
 
 
 <h2>Experience</h2>
 <ul>
   <li>
-    July.2023 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research TF group</a></b>
+    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>
   </li>
   <li>
-    May.2022 - Jun.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research AIC group</a></b>
+    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>
   </li>
   <li>
     Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b><a href="https://www.alibabagroup.com/">Alibaba</a></b>
