--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <h2>Biography</h2>
 
 
-  <p> I am a second-year PhD student working with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a> at Harbin Institute of Technology (HIT).
-  I obtained my Bachelor's degree in Computer Science from HIT in 2022. Currently, my research focuses on 3D vision, specifically AIGC-3D.</p>
+  <p> I am a second-year PhD student in Computer Science at Harbin Institute of Technology (HIT), collaborating with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a>.
+  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. Currently, my research focuses on 3D vision, specifically AIGC-3D.</p>
 
 
 
