--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 <ul>
   <li>
     <a href="https://opendrivelab.com/AD23Challenge.html#Track3"><b>Innovation Award</b></a> at 3D occupancy prediction @autonomous driving challenge , <b>CVPR 2023</b> Workshop
+
+    <br><b>(Most Influential Competition among 100+ CVPR 2023 workshops)</b></br>
   </li>
   <li>
     <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
