--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
   <li>
     China <b>National</b> Scholarship, 2021
   </li>
-
+  <li>
+    <b>First</b> Prize Scholarship,  Harbin Institute of Technology, 2019&2020&2021
+  </li>
   <li>
     <b>First</b> Prize at Mathematics competition  of Chinese College Students, 2019
   </li>
