--- a/index.html
+++ b/index.html
@@ -82,19 +82,20 @@
   </li>
 </ul>
 
-<h2>Awards</h2>
+<h2>Selected Awards</h2>
 <ul>
   <li>
     <a href="https://opendrivelab.com/AD23Challenge.html#Track3"><b>Innovation Award</b></a> at 3D occupancy prediction @autonomous driving challenge , <b>CVPR 2023</b> Workshop
 
     <br><b>(Most Influential Competition among 100+ CVPR 2023 workshops)</b></br>
   </li>
-  <li>
-    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
-  </li>
-  <li>
-    <b>4<sup>th</sup></b> place at VisDA-2022 <a href="https://eval.ai/web/challenges/challenge-page/1806/leaderboard/4228">test leaderboard</a>, <b>NIPS 2022</b> Workshop
-  </li>
+<!--  <li>-->
+<!--    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop-->
+<!--  </li>-->
+<!--  <li>-->
+<!--    <b>4<sup>th</sup></b> place at VisDA-2022 <a href="https://eval.ai/web/challenges/challenge-page/1806/leaderboard/4228">test leaderboard</a>, <b>NIPS 2022</b> Workshop-->
+<!--  </li>-->
+<!--  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-->
   <li>
   <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
   </li>
@@ -112,5 +113,21 @@
 
 
 <h2>Publications</h2>
+<table class="pub_table">
+  <tbody>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
+      <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
+      <br>AD23Challenge, 2023
+      <br>
+      [<a href="https://opendrivelab.com/e2ead/AD23Challenge/Track_3_occ_transformer.pdf">PDF</a>]
+    </td>
+  </tr>
+
+  </tbody>
+</table>
+
 
 </div></div></body></html>
