--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
       <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
-      <br>AD23Challenge, 2023
+      <br>CVPR 2023 tech report
       <br>
       [<a href="https://opendrivelab.com/e2ead/AD23Challenge/Track_3_occ_transformer.pdf">PDF</a>]
     </td>
