--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     China <b>National</b> Scholarship, 2021
   </li>
   <li>
-    <b>First</b> Prize Scholarship,  Harbin Institute of Technology, 2019&2020&2021
+    The <b>First-class</b> Scholarship at Harbin Institute of Technology, 2019&2020&2021
   </li>
   <li>
-    <b>First</b> Prize at Mathematics competition  of Chinese College Students, 2019
+    The <b>First</b> Prize at Mathematics competition  of Chinese College Students, 2019
   </li>
 </ul>
 
