--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <br> Google Scholar: 
         <a href="">Google Scholar Link</a>
           <br> Leetcode
-        <a href="https://leetcode.com/UShitcslj/">Leetcode Link</a>
+        <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
+<!--          https://leetcode.com/hitcslj/-->
         <br> CV: 
         <a href="./files/jianliu.pdf">CV Link</a>
         <br><br></p>
