google scholar link

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <br> Github: 
         <a href="https://github.com/hitcslj">https://github.com/hitcslj</a>
         <br> Google Scholar: 
-        <a href="">Google Scholar Link</a>
-          <br> Leetcode
+        <a href="https://scholar.google.com/citations?user=lgtXgTUAAAAJ&hl=en">Google Scholar Link</a>
+        <br> Leetcode
         <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
 <!--          https://leetcode.com/hitcslj/-->
         <br> CV: 
