--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
     </td>
   </tr>
 
+  <tr>
+    <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
+      <br><u>Jian Liu</u>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
+      <br>Arxiv
+      <br>
+      [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
+      [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
+    </td>
+  </tr>
+
   </tbody>
 </table>
 
