--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
 
   <p> I am a second-year PhD student in Computer Science at Harbin Institute of Technology (HIT), collaborating with <a href="http://homepage.hit.edu.cn/xmliu?lang=zh">Prof. Xianming Liu</a>.
-  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. Currently, my research focuses on 3D vision, specifically AIGC-3D.</p>
+  I obtained my Bachelor's degree in Software Engineering from HIT in 2022. 
+  I am actively engaged in research focused on various aspects of <b>3D vision</b>, including 
+  <a href="https://github.com/hitcslj/awesome-robust-depth-estimation">depth estimation</a>, <a href="https://github.com/CVPR2023-3D-Occupancy-Prediction/CVPR2023-3D-Occupancy-Prediction">3D occupancy prediction</a> and <a href="https://github.com/hitcslj/Awesome-AIGC-3D">AIGC 3D</a>. Additionally, I am also involved in the exciting field of <b>AI4Science</b>, specifically in the area of <a href="https://github.com/hitcslj/awesome-airfoil-design">airfoil design</a>.</p>
 
 
 
