--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
       <br>CVPR 2023 tech report
       <br>
-      [<a href="https://opendrivelab.com/e2ead/AD23Challenge/Track_3_occ_transformer.pdf">PDF</a>]
+      [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
     </td>
   </tr>
 
