--- a/index.html
+++ b/index.html
@@ -120,10 +120,34 @@
   <tbody>
 
   <tr>
+    <td class="pub_td1"><img src="./files/ssd_pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
+      Yifan Mao, <br><u>Jian Liu(equal contribution)</u>, Xianming Liu
+      <br>Arxiv 2024
+      <br>
+      [<a href="https://arxiv.org/abs/2403.05056">PDF</a>]
+      [<a href="https://github.com/hitcslj/SSD">Github</a>]
+    </td>
+  </tr>
+
+
+  
+  <tr>
+    <td class="pub_td1"><img src="./files/reps_pipeline.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
+      Guoqing Zhang, Wenbo Zhao, <br><u>Jian Liu(project leader)</u>, Xianming Liu
+      <br>Arxiv 2024
+      <br>
+      [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
+      [<a href="https://github.com/hitcslj/REPS">Github</a>]
+    </td>
+  </tr>
+
+  <tr>
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
       <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
-      <br>CVPR 2023 tech report
+      <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
     </td>
@@ -133,7 +157,7 @@
     <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon"></td>
     <td class="pub_td2"><br><b>A Comprehensive Survey on 3D Content Generation</b>
       <br><u>Jian Liu</u>, Xiaoshui Huang, Tianyu Huang, Lu Chen, Yuenan Hou, Shixiang Tang, Ziwei Liu, Wanli Ouyang, Wangmeng Zuo, Junjun Jiang, Xianming Liu
-      <br>Arxiv
+      <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2402.01166">PDF</a>]
       [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
