--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/ssd_pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>Stealing Stable Diffusion Prior for Robust Monocular Depth Estimation</b>
-      Yifan Mao, <br><u>Jian Liu(equal contribution)</u>, Xianming Liu
+      <br> Yifan Mao, <u>Jian Liu (equal contribution)</u>, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2403.05056">PDF</a>]
@@ -135,7 +135,7 @@
   <tr>
     <td class="pub_td1"><img src="./files/reps_pipeline.png" class="papericon"></td>
     <td class="pub_td2"><br><b>REPS: Reconstruction-based Point Cloud Sampling</b>
-      Guoqing Zhang, Wenbo Zhao, <br><u>Jian Liu(project leader)</u>, Xianming Liu
+      <br>Guoqing Zhang, Wenbo Zhao, <u>Jian Liu (project leader)</u>, Xianming Liu
       <br>Arxiv 2024
       <br>
       [<a href="https://arxiv.org/abs/2403.05047">PDF</a>]
