--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       <br>
       [<a href="https://arxiv.org/abs/2403.05056">PDF</a>]
       [<a href="https://github.com/hitcslj/SSD">Github</a>]
+      [<a href="https://hitcslj.github.io/ssd/">Project Page</a>]
     </td>
   </tr>
 
