--- a/ssd/index.html
+++ b/ssd/index.html
@@ -269,7 +269,7 @@
           In this paper, we present a novel translation model called GDT (Generative Diffusion Model-based Translation). The objective of GDT is to generate a training sample Ig that closely resembles the day-clear image Id in terms of depth. To achieve this, we leverage the Stable Diffusion prior and introduce several control mechanisms to transform the day-clear image into challenging conditions while preserving specific characteristics.
           </p>
 
-          <h2 class="title is-4">Stealing Stable Diffusion prior</h2>
+          <h2 class="title is-4">Stealing Stable Diffusion Prior</h2>
           <img src="images/ssd_pipeline.png" class="" style="width: 80%;margin-bottom: 2%;">
 
           <p style="text-align:center;" class="has-text-justified">
