--- a/ssd/index.html
+++ b/ssd/index.html
@@ -233,8 +233,7 @@
 
 
           <img src="images/interactive/night.jpg" class="" style="width: 100%;margin-bottom: 2%;">
-          <iframe frameborder="0" class="juxtapose" style="width: 100%; height: 540px;" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=737db410-eb64-11ee-9685-5d0fb8b12f54"></iframe>
-
+          <iframe frameborder="0" class="juxtapose" width="100%" height="320" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=682851de-ef28-11ee-9e97-9dade61bb597"></iframe>
 
           <p style="text-align:center; " class="has-text-centered">
             <h2 class="title is-4">Rainy Samples from nuScenes</h2>
@@ -242,7 +241,7 @@
 
 
           <img src="images/interactive/rainy.jpg" class="" style="width: 100%;margin-bottom: 2%;">
-          <iframe frameborder="0" class="juxtapose" style="width: 100%; height: 540px;" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=8d5a5900-eb65-11ee-9685-5d0fb8b12f54"></iframe>
+          <iframe frameborder="0" class="juxtapose" width="100%" height="320" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=b3fa6e12-ef28-11ee-9e97-9dade61bb597"></iframe>
         
       </div>
     </div>
