--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>
+    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a> and <a href="https://wlouyang.github.io/">Wanli Ouyang</a>
   </li>
   <li>
-    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>
+    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <a href="https://github.com/hzwer">Zhewei Huang</a>
   </li>
   <li>
     Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b><a href="https://www.alibabagroup.com/">Alibaba</a></b>
