--- a/index.html
+++ b/index.html
@@ -75,30 +75,44 @@
 <h2>Experience</h2>
 <ul>
   <li>
-    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a> and <a href="https://wlouyang.github.io/">Wanli Ouyang</a>
+    Sep.2023 - Now , <i>Research Intern</i>, <b><a href="https://www.shlab.org.cn/"> Shanghai AI Lab</a></b>, supervised by <b><a href="https://scholar.google.com/citations?hl=en&user=TJ4ihdkAAAAJ">Shixiang Tang</a></b> and <b><a href="https://wlouyang.github.io/">Wanli Ouyang</a></b> 
   </li>
   <li>
-    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <a href="https://github.com/hzwer">Zhewei Huang</a>
+    May.2022 - Aug.2023 , <i>Research Intern</i>, <b><a href="https://research.megvii.com/">Megvii Research</a></b>, supervised by <b><a href="https://github.com/hzwer">Zhewei Huang</a></b> 
   </li>
   <li>
     Aug.2021 - Oct.2021, <i> Software Dev Engineer Intern</i>, <b><a href="https://www.alibabagroup.com/">Alibaba</a></b>
   </li>
 </ul>
 
-<h2>Selected Awards</h2>
+
+<h2>Challenges</h2>
 <ul>
+
+  <li> 
+    <b>1<sup>st</sup></b> place at <a href="https://codalab.lisn.upsaclay.fr/competitions/17226#results">Robust Depth Estimation</a> @RoboDrive Challenge 2024, <b>ICRA 2024</b> Workshop
+  </li>
+
+
   <li>
     <a href="https://opendrivelab.com/AD23Challenge.html#Track3"><b>Innovation Award</b></a> at 3D occupancy prediction @autonomous driving challenge , <b>CVPR 2023</b> Workshop
 
     <br><b>(Most Influential Competition among 100+ CVPR 2023 workshops)</b></br>
   </li>
-<!--  <li>-->
-<!--    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop-->
-<!--  </li>-->
+
+  <li> 
+    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
+  </li>
+
+
+</ul>
+
+
+<h2>Selected Awards</h2>
+<ul>
 <!--  <li>-->
 <!--    <b>4<sup>th</sup></b> place at VisDA-2022 <a href="https://eval.ai/web/challenges/challenge-page/1806/leaderboard/4228">test leaderboard</a>, <b>NIPS 2022</b> Workshop-->
 <!--  </li>-->
-<!--  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-->
   <li>
   <b>Outstanding</b> Graduates of Harbin Institute of Technology, 2022
   </li>
