--- a/index.html
+++ b/index.html
@@ -86,27 +86,6 @@
 </ul>
 
 
-<h2>Challenges</h2>
-<ul>
-
-  <li> 
-    <b>1<sup>st</sup></b> place at <a href="https://codalab.lisn.upsaclay.fr/competitions/17226#results">Robust Depth Estimation</a> @RoboDrive Challenge 2024, <b>ICRA 2024</b> Workshop
-  </li>
-
-
-  <li>
-    <a href="https://opendrivelab.com/AD23Challenge.html#Track3"><b>Innovation Award</b></a> at 3D occupancy prediction @autonomous driving challenge , <b>CVPR 2023</b> Workshop
-
-    <br><b>(Most Influential Competition among 100+ CVPR 2023 workshops)</b></br>
-  </li>
-
-  <li> 
-    <b>1<sup>st</sup></b> place at RGB+TOF Depth Completion @MIPI-challenge 2022 <a href="https://codalab.lisn.upsaclay.fr/competitions/4956#results">validation leaderboard</a>, <b>ECCV 2022</b> Workshop
-  </li>
-
-
-</ul>
-
 
 <h2>Selected Awards</h2>
 <ul>
@@ -158,15 +137,6 @@
     </td>
   </tr>
 
-  <tr>
-    <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
-    <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
-      <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
-      <br>Arxiv 2024
-      <br>
-      [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
-    </td>
-  </tr>
 
   <tr>
     <td class="pub_td1"><img src="./files/aigc_3d.png" class="papericon"></td>
@@ -178,6 +148,45 @@
       [<a href="https://github.com/hitcslj/Awesome-AIGC-3D">Github</a>]
     </td>
   </tr>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
+      <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
+      <br>CVPR23 Technical Report
+      <br>
+      [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
+    </td>
+  </tr>
+
+  </tbody>
+</table>
+
+<h2>Challenges</h2>
+<table class="pub_table">
+  <tbody>
+  
+  <tr>
+      <td class="pub_td1"><img src="./files/icra24_dinosd.png" class="papericon" width="300" height="130"></td>
+      <td class="pub_td2"><br><b>1<sup>st</sup> place at Robust Depth Estimation</a> on RoboDrive Challenge, @ICRA 2024</b>
+        <br><u>Jian Liu</u>, Yifan Mao, Ming Li, Zihan Qin, Jiayang Liu, Jialei Xu, Cunxi Chu, Wenbo Zhao, Junjun Jiang, Xianming Liu
+        <br>
+        [<a href="https://robodrive-24.github.io">Challenge Website</a>]
+      </td>
+  </tr>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/cvpr23_occ.jpg" class="papericon" width="300" height="130"></td>
+    <td class="pub_td2"><br><b>Innovation Award at 3D occupancy prediction on autonomous driving challenge, @CVPR 2023 </b>
+      <br> <u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
+      <br>
+      [<a href="https://opendrivelab.com/AD23Challenge.html">Challenge Website</a>]
+    </td>
+  </tr>
+
+
+  
+
 
   </tbody>
 </table>
