preprints&technical reports

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
 
 
-<h2>Publications</h2>
+
+
+<h2>Preprints</h2>
 <table class="pub_table">
   <tbody>
 
@@ -149,6 +151,13 @@
     </td>
   </tr>
 
+  </tbody>
+</table>
+
+
+<h2>Technical Reports</h2>
+<table class="pub_table">
+  <tbody>
   <tr>
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
