add dino_sd challenge solution

--- a/index.html
+++ b/index.html
@@ -162,9 +162,20 @@
     <td class="pub_td1"><img src="./files/occtransformer.png" class="papericon"></td>
     <td class="pub_td2"><br><b>OccTransformer: Improving BEVFormer for 3D camera-only occupancy prediction</b>
       <br><u>Jian Liu</u>, Sipeng Zhang, Chuixin Kong, Wenyuan Zhang, Yuhang Wu, Yikang Ding, Borun Xu, Ruibo Ming, Donglai Wei, Xianming Liu
-      <br>CVPR23 Technical Report
+      <br>CVPR23 Autonomous Driving Challenge
       <br>
       [<a href="https://arxiv.org/abs/2402.18140">PDF</a>]
+    </td>
+  </tr>
+
+  <tr>
+    <td class="pub_td1"><img src="./files/dino_sd.png" class="papericon"></td>
+    <td class="pub_td2"><br><b>DINO-SD: Champion Solution for ICRA 2024 RoboDepth Challenge</b>
+      <br>Yifan Mao, Ming Li, <u>Jian Liu (equal contribution)</u>, Jiayang Liu, Zihan Qin, Cunxi Chu, Jialei Xu, Wenbo Zhao, Junjun Jiang, Xianming Liu
+      <br>ICRA24 RoboDrive Challenge
+      <br>
+      [<a href="">PDF</a>]
+      [<a href="">Github</a>]
     </td>
   </tr>
 
