dino_sd solution

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <br>Yifan Mao, Ming Li, <u>Jian Liu (equal contribution)</u>, Jiayang Liu, Zihan Qin, Cunxi Chu, Jialei Xu, Wenbo Zhao, Junjun Jiang, Xianming Liu
       <br>ICRA24 RoboDrive Challenge
       <br>
-      [<a href="">PDF</a>]
+      [<a href="https://arxiv.org/abs/2405.17102">PDF</a>]
       [<a href="">Github</a>]
     </td>
   </tr>
