--- a/afbench/index.html
+++ b/afbench/index.html
@@ -272,13 +272,13 @@
             In this paper, we proposed the SSD, a novel approach aims at stealing stable diffusion prior for RMDE. SSD incorporates a new translation model called GDT, which is based on generative diffusion models. To adapt to GDT for RMDE, we integrate DINOv2 into our depth model's architecture, it helps to extract universal image features. Besides, we optimized the distillation loss used for knowledge distillation. Our approach is generalized and can be adapted to a variety of challenging conditions.
           </p>
           
-          <h2 class="title is-4"> Generative Diffusion model-based Translation </h2>
+          <h2 class="title is-4"> Automatic Data Engine  </h2>
           <img src="images/gdt_pipeline.png" class="" style="width: 80%;margin-bottom: 2%;">
           <p style="text-align:center;" class="has-text-justified">
           In this paper, we present a novel translation model called GDT (Generative Diffusion Model-based Translation). The objective of GDT is to generate a training sample Ig that closely resembles the day-clear image Id in terms of depth. To achieve this, we leverage the Stable Diffusion prior and introduce several control mechanisms to transform the day-clear image into challenging conditions while preserving specific characteristics.
           </p>
 
-          <h2 class="title is-4">Stealing Stable Diffusion Prior</h2>
+          <h2 class="title is-4">Benchmarking Setup</h2>
           <img src="images/ssd_pipeline.png" class="" style="width: 80%;margin-bottom: 2%;">
 
           <p style="text-align:center;" class="has-text-justified">
