--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <br> Google Scholar: 
         <a href="https://scholar.google.com/citations?user=lgtXgTUAAAAJ&hl=en">Google Scholar Link</a>
         <br> Leetcode
-        <a href="https://leetcode.com/hitcslj/">Leetcode Link</a>
+        <a href="https://leetcode.cn/u/hitcslj/">Leetcode Link</a>
 <!--          https://leetcode.com/u/UShitcslj/-->
         <br> CV: 
         <a href="./files/jianliu.pdf">CV Link</a>
