--- a/afbench/index.html
+++ b/afbench/index.html
@@ -179,7 +179,7 @@
             <span class="author-block"><sup>3</sup>Beihang University,</span>
             <span class="author-block"><sup>4</sup>Shanghai Aircraft Design and Research Institute,</span>
             <span class="author-block"><sup>5</sup>Shanghai Jiaotong University,</span>
-            <span class="author-block"><sup>6</sup>The Chinese University of Hong Kong,</span>
+            <span class="author-block"><sup>6</sup>The Chinese University of Hong Kong</span>
           </div>
           
 
@@ -246,12 +246,13 @@
         <h2 class="title is-3">🚀 Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Data-driven generative models have emerged as a promising approach towards achieving efficient and generalizable inverse design in mechanical engineering. However, due to their collections are prohibitively expensive, there are still absent in open-sourced and large-scale reference benchmarks representing real-world industrial applications. It is mainly the case for airfoil inverse design, which requires to generate and edit diverse and aerodynamic-qualified airfoils following the multimodal instructions, \emph{i.e.,} drags and physical geometric parameters. 
+            Data-driven generative models have emerged as promising approaches towards achieving efficient and generalizable inverse design in mechanical engineering. However, due to prohibitively high cost in time and money, there is still lack of open-source and large-scale benchmark for mechanical inverse design. It is mainly the case for airfoil inverse design, which requires to generate and edit diverse and aerodynamic-qualified airfoils following the multimodal instructions, <em>i.e.,</em> dragging points and physical parameters.
           </p>
           <p>
-            To the best of our knowledge, we present the very early open-source endeavors in large-scale airfoil inverse design, AFBench, including a large-scale dataset with 200 thousand airfoils and high-quality aerodynamic and geometric labels, a unified framework to enable mulitmodal controllable and airfoil generation and editing, and comprehensive metrics to evaluate various existing arifoil inverse design methods. Our aim is to establish AFBench a growing ecosystem for training and evaluating airfoil inverse design methods, with a specific focus on data-driven controllable inverse design models by multimodal instructions capable of bridging the gap between ideas and execution, the academic research and industrial applications. 
+            To address the problem, we present the open-source endeavors in airfoil inverse design, <em>AFBench</em>, including a large-scale dataset with 200 thousand airfoils and high-quality aerodynamic and geometric labels, two novel and practical airfoil inverse design tasks, <em>i.e.,</em> conditional generation on multimodal physical parameters, controllable editing, and comprehensive metrics to evaluate various existing airfoil inverse design methods.
           </p>
           <p>
+            Our aim is to establish <em>AFBench</em> as an ecosystem for training and evaluating airfoil inverse design methods, with a specific focus on data-driven controllable inverse design models by multimodal instructions capable of bridging the gap between ideas and execution, the academic research and industrial applications.
             We have provided baseline models, comprehensive experimental observations, and analysis to accelerate future research. Our baseline model is trained on an RTX 3090 GPU, completing the training within 16 hours. The codebase, datasets and benchmarks will be available at <a href="https://hitcslj.github.io/afbench/">https://hitcslj.github.io/afbench/</a>.
           </p>
         </div>
@@ -300,7 +301,7 @@
         <div class="column">
           <div class="content" style="text-align:center;">
             <h2 class="title is-3 has-text-centered">🚀 Airfoil Demo</h2>
-            <img src="images/airfoil-demo.png" class="" style="width: 100%;margin-bottom: 2%;">
+            <img src="images/airfoil-demo-new.png" class="" style="width: 100%;margin-bottom: 2%;">
             <p style="text-align: center; justify-content: center;">
               <b>Our Airfoil Generation and Editing Software. 
                 (a) Generating airfoils and editing their physical parameters. 
