--- a/afbench/index.html
+++ b/afbench/index.html
@@ -146,21 +146,18 @@
               <span class="author-block">
                 <a href="https://hitcslj.github.io/">Jian Liu</a><sup>1,2</sup>,</span>
               <span class="author-block">
-                <a href="">Jianyu Wu</a><sup>3</sup>,</span>
+                <a href="">Jianyu Wu</a><sup>2</sup>,</span>
               <span class="author-block">
-                <a href="">Hairun Xie</a><sup>4</sup>,
+                <a href="">Hairun Xie</a><sup>3</sup>,
               </span>
               <span class="author-block">
-                <a href="">Guoqing Zhang</a><sup>1</sup>,
+                <a href="">Guoqing Zhang</a><sup>1,2</sup>,
               </span>
               <span class="author-block">
                 <a href="http://sofienbouaziz.com">Jing Wang</a><sup>5</sup>,
               </span>
               <span class="author-block">
-                <a href="">Shixiang Tang</a><sup>6</sup>,
-              </span>
-              <span class="author-block">
-                <a href="">Qingsong Xie</a><sup>5</sup>,
+                <a href="">Wei Liu</a><sup>3</sup>,
               </span>
               <span class="author-block">
                 <a href="https://wlouyang.github.io/">Wanli Ouyang</a><sup>2</sup>,
@@ -169,17 +166,20 @@
                 <a href="http://homepage.hit.edu.cn/jiangjunjun">Junjun Jiang</a><sup>1</sup>,
               </span>
               <span class="author-block">
+                <a href="">Shixiang Tang</a><sup>2</sup>,
+              </span>
+              <span class="author-block">
+                <a href="">Miao Zhang</a><sup>3</sup>,
+              </span>
+              <span class="author-block">
                 <a href="https://homepage.hit.edu.cn/xmliu">Xianming Liu</a><sup>1</sup>
               </span>
             </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Harbin Institute of Technology,</span>
-            <span class="author-block"><sup>2</sup>Shanghai AI Laboratory,</span>
-            <span class="author-block"><sup>3</sup>Beihang University,</span>
-            <span class="author-block"><sup>4</sup>Shanghai Aircraft Design and Research Institute,</span>
-            <span class="author-block"><sup>5</sup>Shanghai Jiaotong University,</span>
-            <span class="author-block"><sup>6</sup>The Chinese University of Hong Kong</span>
+            <span class="author-block"><sup>2</sup>Shanghai AI Laboratory</span>
+            <span class="author-block"><sup>3</sup>Shanghai Aircraft Design and Research Institute</span>
           </div>
           
 
